[gd_scene load_steps=8 format=2]

[ext_resource path="res://vehicles/vehicle.tscn" type="PackedScene" id=1]
[ext_resource path="res://vehicles/meshes/vehicles_tank_cannon.mesh" type="ArrayMesh" id=2]
[ext_resource path="res://vehicles/meshes/vehicles_tank.mesh" type="ArrayMesh" id=3]
[ext_resource path="res://vehicles/tank.gd" type="Script" id=4]
[ext_resource path="res://sounds/launcher.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape" id=2]
radius = 0.798507
height = 1.63148

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.05579, 0.746028, 1.54374 )

[node name="Tank" instance=ExtResource( 1 )]
script = ExtResource( 4 )
points = 75
occupants = 2
level = 2
can_attack = true
attack_rate = 2.5

[node name="Mesh" parent="Origin" index="0"]
mesh = ExtResource( 3 )

[node name="CannonMesh" type="MeshInstance" parent="Origin" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0.2 )
mesh = ExtResource( 2 )

[node name="FirePosition" type="Position3D" parent="Origin/CannonMesh" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.14, -1.8 )

[node name="CollisionShape" parent="." index="1"]
shape = SubResource( 2 )

[node name="CollisionShape" parent="Hitbox" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0538931 )
shape = SubResource( 1 )

[node name="ShootSound" type="AudioStreamPlayer3D" parent="." index="7"]
stream = ExtResource( 5 )
unit_db = -5.0
unit_size = 25.0
bus = "SFX"
attenuation_filter_cutoff_hz = 20500.0
